# snapr

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: publish.yml  publish_snapr.yml  publish_snapr_py.yml  verify.yml  verify_py.yml
examples/batch/: Cargo.toml  README.md
examples/batch/src/: main.rs
examples/dynamic/: Cargo.toml  README.md
examples/dynamic/src/: main.rs
examples/label/: Cargo.toml  README.md
examples/label/src/: main.rs
examples/open-street-maps/: .gitignore  Cargo.toml  README.md
examples/open-street-maps/src/: lib.rs  main.rs
examples/open-street-maps/src/line/: main.rs
examples/open-street-maps/src/line_string/: main.rs
examples/open-street-maps/src/point/: main.rs
examples/open-street-maps/src/polygon/: main.rs
examples/stateful/: Cargo.toml  README.md
examples/stateful/src/: main.rs
examples/styling/: Cargo.toml  README.md
examples/styling/src/: main.rs
examples/svg/: Cargo.toml  README.md
examples/svg/src/: main.rs
examples/tokio/: Cargo.toml  README.md
examples/tokio/src/: main.rs
snapper/: Cargo.toml
snapper/src/: builder.rs  drawing.rs  lib.rs
snapper/src/drawing/: drawable.rs  mod.rs  style.rs  styled_geo.rs  svg.rs
snapper/src/drawing/style/: mod.rs
snapper/src/drawing/style/geo/: line.rs  mod.rs  point.rs  polygon.rs
snapr/: .gitignore  Cargo.toml  README.md
snapr-py/: .gitignore  Cargo.toml  README.md  pyproject.toml  snapr.pyi
snapr-py/examples/: point.py
snapr-py/src/: geo.rs  lib.rs  style.rs  utilities.rs
snapr/src/: builder.rs  fetchers.rs  lib.rs  tokio.rs
snapr/src/drawing/: mod.rs  style.rs  svg.rs
snapr/src/drawing/geometry/: line.rs  mod.rs  point.rs  polygon.rs
snapr/src/drawing/style/: mod.rs
snapr/src/drawing/style/geo/: line.rs  mod.rs  point.rs  polygon.rs
