[workspace]
members = [
    "examples/open-street-maps",
    "examples/styling",
    "snapper"
]
resolver = "2"

[workspace.package]
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.89"
geo = "0.28.0"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
rayon = "1.10.0"
thiserror = "1.0.64"
tiny-skia = { version = "0.11.4", default-features = false, features = ["simd", "std"] }
