[package]
name = "snapper"
version = "0.1.0"
edition = "2021"

# Shared Package Configuration
authors = { workspace = true }
license = { workspace = true }

[features]
default = [ "drawing" ]
drawing = [ "dep:tiny-skia" ]

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true, optional = true }