[package]
name = "snapper"
version = "0.1.0"
edition = "2021"

# Shared Package Configuration
authors = { workspace = true }
license = { workspace = true }

[features]
default = [ "drawing", "rayon" ]
drawing = [ "dep:tiny-skia" ]
rayon = [ "dep:rayon" ]

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
image = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true, optional = true }
