[package]
name = "snapper"
version = "0.1.0"
edition = "2021"

# Shared Package Configuration
authors = { workspace = true }
license = { workspace = true }

[features]
default = [ "drawing", "rayon", "svg" ]
drawing = [ "dep:hex", "dep:tiny-skia" ]
rayon = [ "dep:rayon" ]
svg = [ "dep:resvg", "drawing" ]

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
hex = { workspace = true, optional = true }
image = { workspace = true }
rayon = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true, optional = true }
