[package]
name = "snapr-py"
version = "0.1.0"
edition = "2021"
publish = false

# Shared Package Configuration
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "snapr"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
pyo3 = "0.22.0"
snapr = { path = "../snapr" }
