[package]
name = "snapr"
edition = "2021"
description = "Library enabling a flexible and frictionless way to render snapshots of maps with overlayed geometries. "
categories = ["science::geo"]
keywords = ["geo", "geography", "geospatial", "maps"]
repository = "https://github.com/c1m50c/snapr"

# Shared Package Configuration
authors.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["rayon", "svg"]
rayon = ["dep:rayon"]
svg = ["dep:resvg"]
tokio = ["dep:async-trait", "dep:tokio"]

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1.83", optional = true }
geo.workspace = true
hex = { workspace = true }
image.workspace = true
rayon = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
thiserror.workspace = true
tiny-skia = { workspace = true }
tokio = { version = "1.41.0", optional = true, features = ["rt"] }
