[package]
name = "label"
edition = "2021"
publish = false

# Shared Package Configuration
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
image = { workspace = true }
reqwest = { version = "0.12.7", features = ["blocking"] }
snapper = { path = "../../snapper" }
tiny-skia = { workspace = true }